# otus-C-Professional

./: .gitignore  CMakeLists.txt
.github/workflows/: release.yml
homework_1/: tests.cpp
homework_2/: main.cpp
tests/: tests.cpp
